syntax = "proto3";
option java_package = "com.hazelcast.client.impl.client";


service Processor {
  rpc process (ProcessRequest) returns (ProcessReply) {}
  rpc call (CallRequest) returns (CallReply) {}
}

message ProcessRequest {
  bytes processorData = 1;
  bytes keyData = 2;
  bytes valueData = 3;
}

message ProcessReply {
  bytes resultData = 1;
  bytes newValueData = 2;
  bool mutate = 3;
}

message CallRequest{
  bytes callableData = 1;
}

message CallReply {
  bytes resultData = 1;
}
